--- a/01-mathProjects.Rmd
+++ b/01-mathProjects.Rmd
@@ -48,12 +48,11 @@ protein folding models using basic linear algebra.
 - Equivariant Embedding Calculus
 
 [the paper]: https://doi.org/10.1007/s40062-020-00255-3
-{.external-link}
-[arXiv version]: https://arxiv.org/abs/1711.07670 {.external-link}
-[thesis]: docs/PhD%20Thesis.pdf
-[notes1]: docs/2019%20-%20OSU%20Conference.pdf
-[notes2]: docs/2019%20-%20Thesis%20Defense.pdf
-[Information Processing Letters, IPL4801]: docs/2012%20-%20Protein%20Folding.pdf
+[arXiv version]: https://arxiv.org/abs/1711.07670 
+[thesis]: https://drive.google.com/file/d/1fHkImG-CTB2liHDIAo3YmzqBmN-Qibx6/view?usp=sharing
+[notes1]: https://drive.google.com/file/d/1h8pHb-5HmM55_bwdzPYDB7cVHo4MHy-I/view?usp=sharing
+[notes2]: https://drive.google.com/file/d/1D8TSRQFVUVjM3wQ74npbH2hibrHsDho_/view?usp=sharing
+[Information Processing Letters, IPL4801]: https://drive.google.com/file/d/1xT6C4O_fMvpqoJCfnSq1ypeikM6XNMjw/view?usp=sharing
 [MRC Workshop]: http://www.ams.org/programs/research-communities/2019MRC-Geometry
 [Lean theorem prover]: https://leanprover-community.github.io/
 [Mathcamp 2020]: https://apurvanakade.github.io/courses/lean_at_MC2020/
