--- a/02-teaching.Rmd
+++ b/02-teaching.Rmd
@@ -173,12 +173,12 @@ was a month long summer course which aims to cover semester-worth of material in
   [The Quantum Spring]: courses/2018MathCamp/TheQuantumSpring.pdf
   [Would I ever Lie Group to you?]: courses/2018MathCamp/WouldIEverLieGroupToYou.pdf
   
-  [All things manifoldy]: courses/2017MathCamp/All%20things%20manifoldy/
-  [Euler Characteristic]: courses/2017MathCamp/Euler%20Characteristic/
-  [Symmetries of Spaces]: courses/2017MathCamp/Symmetries%20of%20Spaces/
-  [What is Homology?]: courses/2017MathCamp/What%20is%20Homology/
-  [Representation theory]: courses/2017MathCamp/Representation%20theory/
-  [Lagrangian and Hamiltonian Mechanics]: courses/2017MathCamp/Lagrangian%20and%20Hamiltonian%20Mechanics/
+  [All things manifoldy]: https://drive.google.com/drive/folders/1_ksj5iK0wjRhCcMH2r3a6t-5Y_IXTG49?usp=sharing
+  [Euler Characteristic]: https://drive.google.com/drive/folders/13-oarucRe06Mi7jWdGFAQoW1Z9h0lcWM?usp=sharing
+  [Symmetries of Spaces]: https://drive.google.com/drive/folders/18f1YeG10HfZ-keih3sbdkXNTybVcjY38?usp=sharing
+  [What is Homology?]: https://drive.google.com/drive/folders/1xardSdDjo__hk7os2CR5BUOPjvAwuD-q?usp=sharing
+  [Representation theory]: https://drive.google.com/drive/folders/1gCkxfiQ09TKmofzZKd6TlNikzWV3Ltum?usp=sharing
+  [Lagrangian and Hamiltonian Mechanics]: https://drive.google.com/drive/folders/1sCCXN0ffj0SP216WOwTwe7LJgIXJtPpg?usp=sharing
 
   [What is a Spectrum?]: notes/Bits%20and%20Pieces/What%20is%20a%20Spectrum%3F.pdf
   [Vector fields on Spheres]: notes/CMI/vector%20fields%20on%20spheres/index.html
