--- a/01-Lean.Rmd
+++ b/01-Lean.Rmd
@@ -1,6 +1,6 @@
 # Machine, Math, and Me
 
-I have recently gotten very interesting in teaching math to computers. 
+I have recently gotten interesting in teaching math to computers. 
 This is different from doing computations as here we are trying to teach math to computers the same way we understand it.
 
 The software I use for this is [Lean](https://leanprover.github.io/about/). 
@@ -10,7 +10,7 @@ It was developed my computer scientists at Microsoft Research but has since been
 My primary interest in Lean is as a potential tool for teaching math proofs. 
 When it comes to learning to write proofs, the biggest hurdle is the lack of immediate feedback.
 Even well meaning students often find it difficult to spot logical errors in their proofs.
-I strongly believe that having a software that check your proofs and point out errors will effectively solve this problem.
+I strongly believe that having a software that can pinpoint out errors in proofs will effectively solve this problem.
 
 My secondary interest lies in combining machine learning and theorem proving. 
 [Some progress](https://github.com/metamath/set.mm/wiki/Automated-proving) is already being made on this front for a more basic theorem prover called [Metamath](http://us.metamath.org/). 
@@ -22,7 +22,7 @@ Currently, I try to teach Lean to students and am working on developing and expa
 
 Lean is accessible to anyone who understands basic theorem proving in math.
 You can find several learning resources [here](https://leanprover-community.github.io/learn.html).
-I personally learned Lean by playing the [Natural numbers game](https://wwwf.imperial.ac.uk/~buzzard/xena/natural_number_game/) and banging my head against the wall while solving some problems on [Codewars](https://www.codewars.com/kata/search/lean).
+I personally learned Lean by playing the [Natural numbers game](https://wwwf.imperial.ac.uk/~buzzard/xena/natural_number_game/), reading [Theorem Proving in Lean](https://leanprover.github.io/theorem_proving_in_lean/introduction.html), and banging my head against the wall while solving some problems on [Codewars](https://www.codewars.com/kata/search/lean).
 
 However, online resources are not enough for learning the language as there are far too many subtle, technical difficulties that arise in practice.
 There are very helpful and supportive Lean communities on [zulipchat](https://leanprover.zulipchat.com/) and [discord](https://discord.gg/AnHKcDm) where you can ask questions and get help to your heart's content.
@@ -30,8 +30,9 @@ There are very helpful and supportive Lean communities on [zulipchat](https://le
 The best way to learn is by teaching. 
 As such, I taught a course [Lean at MC2020](courses/lean_at_MC2020/index.html) at Mathcamp 2020 where we taught Lean the proof of irrationality of \( \sqrt{2} \).
 
-## What needs to be done?
+## Read more
 
+- [Future of Mathematics?](https://www.youtube.com/watch?v=Dp-mQ3HxgDE) talk by [Kevin Buzzard](https://xenaproject.wordpress.com/)
 - [Missing undergraduate mathematics in mathlib](https://leanprover-community.github.io/undergrad_todo.html)
-- [The sphere eversion project](https://leanprover-community.github.io/sphere-eversion/blueprint/index.html)
+- [The sphere eversion project](https://leanprover-community.github.io/sphere-eversion/blueprint/sect0001.html)
 - [Sudoku in Lean](https://github.com/TwoFX/sudoku)
