--- a/04-etc.Rmd
+++ b/04-etc.Rmd
@@ -3,9 +3,11 @@
 [<img src="images/books.gif" width="250px" class="right" />](https://www.gocomics.com/sarahs-scribbles/2014/1/17)
   
 Fun for me is [reading books] and writing on [my blog] about random
-things. I love to design websites like this one, and my blog\'s theme
+things. I love to [travel]. I type in [dvorak].
+
+I love to design websites like this one, and [my blog\'s theme]
 using [Hugo]. I have also started a couple of wikis for dumping [math-ed
-resources] and [computer hacks]. I love to [travel]. I type in [dvorak].
+resources] and [computer hacks]. 
 
 In a past life I was involved with and highly recommend the following:
 
@@ -23,11 +25,12 @@ In a past life I was involved with and highly recommend the following:
     -   [Baltimore Bike Party]
     -   [Baltimore Improv Group]
 
+  [my blog\'s theme]: https://github.com/apurvnakade/HugoTheme
   [reading books]: ./blog/art/books/index.html
   [my blog]: ./blog
   [Hugo]: https://gohugo.io/
-  [math-ed resources]: https://github.com/apurvnakade/math-education/wiki
-  [computer hacks]: https://github.com/apurvanakade/apurvanakade.github.io/wiki
+  [math-ed resources]: https://www.notion.so/Math-Wiki-01783c0807aa4fa18d7d28a7f724fcde
+  [computer hacks]: https://www.notion.so/Wiki-1b656cca9c964d79b932d4c76cc8ed7d
   [travel]: https://drive.google.com/open?id=1wpCR64gzKc7Zp8V-FIn43ANMA6QULjMS&usp=sharing
  
   [dvorak]: https://en.wikipedia.org/wiki/Dvorak_Simplified_Keyboard
