--- a/04-etc.Rmd
+++ b/04-etc.Rmd
@@ -5,8 +5,8 @@
 Fun for me is [reading books] and writing on [my blog] about random
 things. I love to [travel]. I type in [dvorak].
 
-I love to design websites like this one, and [my blog\'s theme]
-using [Hugo]. I have also started a couple of wikis for dumping [math-ed
+I love designing websites like this one (built using [bookdown]) and [my blog\'s theme]
+(built using [Hugo]). I have also started a couple of wikis for dumping [math-ed
 resources] and [computer hacks]. 
 
 In a past life I was involved with and highly recommend the following:
@@ -28,6 +28,7 @@ In a past life I was involved with and highly recommend the following:
   [my blog\'s theme]: https://github.com/apurvnakade/HugoTheme
   [reading books]: ./blog/art/books/index.html
   [my blog]: ./blog
+  [bookdown]: https://bookdown.org/
   [Hugo]: https://gohugo.io/
   [math-ed resources]: https://www.notion.so/Math-Wiki-01783c0807aa4fa18d7d28a7f724fcde
   [computer hacks]: https://www.notion.so/Wiki-1b656cca9c964d79b932d4c76cc8ed7d
