--- a/index.Rmd
+++ b/index.Rmd
@@ -1,46 +1,28 @@
 --- 
 title: "Apurva Nakade"
-author: "Apurva Nakade"
+author: "email: \"a\" + lowercase(lastname) + \"@uwo.ca\" <br /> [CV], [Research Statement] (outdated) "
 output: bookdown::gitbook
 github-repo: apurvanakade/apurvanakade.github.io
 description: "Personal Website."
 favicon: "images/sisyphus.svg"
 ---
 
-# Apurva Nakade
+# {-}
 
-<img src="images/me0.jpg" width="200px" class="right" />
+<img src="images/me0.jpg" width="200px" class="left" />
 
-I\'m a postdoc in the [Department of Mathematics] at the University of
-Western Ontario working with [Dan Christensen] and [Chris Kapulkin].
+I\'m a postdoc at the [University of Western Ontario] working with [Dan Christensen] and [Chris Kapulkin]. 
+I do research in algebraic topology and homotopy theory.
 
-In the Fall of 2020, I\'ll be teaching Math 2151A (Discrete Math for Engineers).
+In addition to research, I am very passionate about improving math education. I want to
+modernize math-ed and bring it to the 21st century through the use of new technological innovations 
+in teaching and in the process make it more accessible and equitable.
 
-I work in the area of algebraic topology and homotopy theory. My broad
-interests are in understanding how homotopy theoretic tools can be used
-to solve problems from other areas of math. 
+I\'m currently teaching [Math 2151A (Discrete Math for Engineers)].
 
-While learning homotopy type
-theory, I came across the [Lean theorem prover] and have since gotten
-obsessed with it. 
-
-I am interested in improving math education. I want to
-modernize math education and bring it to the 21st century through the
-use of new technological innovations in teaching and in the process make
-it more accessible and equitable.
-
-|              |                                       |
-|--------------|---------------------------------------|
-| Email        | "a" + lowercase(lastname) + "@uwo.ca" |
-| Office Hours | all the time                          |
-| Job Stuff    | [ceeeeEEEEEVVVVVeeeee]                |
-|              | [Research Statement]                  |
-
-
-  [Department of Mathematics]: http://www.math.uwo.ca/ 
+  [University of Western Ontario]: http://www.math.uwo.ca/ 
   [Dan Christensen]: https://jdc.math.uwo.ca/ 
   [Chris Kapulkin]: http://www.math.uwo.ca/faculty/kapulkin/
-  [ceeeeEEEEEVVVVVeeeee]: https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing
+  [CV]: https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing
   [Research Statement]: https://drive.google.com/file/d/15HeOJjr6BuuxA0ZNCwSYeHpB2d5Z2sci/view?usp=sharing
-  [USA/Canada Mathcamp]: https://www.mathcamp.org/current_program/
-  [Lean theorem prover]: https://leanprover-community.github.io/
+  [Math 2151A (Discrete Math for Engineers)]: https://owl.uwo.ca/portal/site/5a31b856-d356-4278-9a3a-1dfebc96e873
